LoyaltyApp/force-app/main/default/objects/Loyalty_Brand_Value__c/Loyalty_Brand_Value__c.object-meta.xml
<CustomObject>
    <label>Loyalty Brand Value</label>
    <nameField>
        <label>Loyalty Brand Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Brand Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>