LoyaltyApp/force-app/main/default/objects/Loyalty_Brand_Value__c/fields/Loyalty_Brand__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Brand__c</fullName>
    <label>Loyalty Brand</label>
    <referenceTo>Loyalty_Brand__c</referenceTo>
    <relationshipLabel>Loyalty Brand Values</relationshipLabel>
    <relationshipName>Loyalty_Brand_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>