LoyaltyApp/force-app/main/default/objects/Loyalty_Brand_Value__c/fields/Loyalty_Brand_Value_Code__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Brand_Value_Code__c</fullName>
    <displayFormat>BRANDVALUE-{0000}</displayFormat>
    <label>Loyalty Brand Value Code</label>
    <type>AutoNumber</type>
</CustomField>