LoyaltyApp/force-app/main/default/objects/Loyalty_Brand_Value__c/fields/Loyalty_Value__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Value__c</fullName>
    <label>Loyalty Value</label>
    <referenceTo>Loyalty_Value__c</referenceTo>
    <relationshipLabel>Loyalty Brand Values</relationshipLabel>
    <relationshipName>Loyalty_Brand_Values</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>